are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

345077  linux syscall execveat support (linux 3.19)
369029  handle linux syscalls sched_getattr and sched_setattr
n-i-bz  helgrind: If hg_cli__realloc fails, return NULL.

422174  unhandled instruction bytes: 0x48 0xE9 (REX prefixed JMP instruction)
422623  epoll_ctl warns for uninitialized padding on non-amd64 64bit arches
423021  PPC:  Add missing ISA 3.0 documentation link and HWCAPS test.


Release 3.16.1 (?? June 2020)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.16.1 is identical to 3.16.0, except that it fixes the following bug that
was discovered late in the 3.16.0 release process:

422715  valgrind 3.16.0 on 32-bit x86: vex: the `impossible' happened:
        expr_is_guardable: unhandled expr



Release 3.16.0 (27 May 2020)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.16.0 is a feature release with many improvements and the usual collection of
bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM32/Linux, ARM64/Linux,
PPC32/Linux, PPC64BE/Linux, PPC64LE/Linux, S390X/Linux, MIPS32/Linux,
MIPS64/Linux, ARM/Android, ARM64/Android, MIPS32/Android, X86/Android,
X86/Solaris, AMD64/Solaris and AMD64/MacOSX 10.12.  There is also preliminary
support for X86/macOS 10.13, AMD64/macOS 10.13 and nanoMIPS/Linux.

* ==================== CORE CHANGES ===================

* It is now possible to dynamically change the value of many command line
  options while your program (or its children) are running under Valgrind.

  To see the list of dynamically changeable options, run
     "valgrind --help-dyn-options".

  You can change the options from the shell by using vgdb to launch
  the monitor command "v.clo <clo option>...".
  The same monitor command can be used from a gdb connected
  to the valgrind gdbserver.
  Your program can also change the dynamically changeable options using